fix bottom page spacing

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -255,7 +255,7 @@ input[type="checkbox"], input[type="radio"] {
 
 .container {
   box-sizing: border-box;
-  height: 100%;
+  min-height: 100vh;
   padding: 30px 0 30px 30px;
   display: flex;
   flex-direction: row;
